--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-本项目基于A股L2数据, 以单标的, 每天行情为数据储存单元, 总文件数在数千万级别(单目录文件数<10000, 否则影响性能)
+本项目基于A股L2数据, 数据储存单元: 每日行情(单标的 快照+逐笔成交+逐笔委托), 总文件数在数千万级别
 请使用高速SSD作为数据储存:
 分区方法: GPT(不选MBR, APM)
 文件系统: XFS(不选NTFS, EXT4, Btrfs, F2FS)
