--- a/README
+++ b/README
@@ -5,31 +5,57 @@ output/database/YYYY/MM/DD/ASSET_CODE/逐笔合并_订单数 + 快照_快照数.
 
 请务必使用XFS格式化高速SSD, 作为数据储存
 
-
-
-
-
-
-
-
 # ================================================
 对于文件系统配置, 请参考 doc/filesystem.md
 
+# ================================================
+# 项目架构图谱
 
+## 运行流程 (Execution Flow)
+```
+入口: run.py ──► py/main.py ──► cpp/projects/main/build.sh ──► CMake ──► app_main (C++可执行文件)
+```
 
+## 项目树状结构 (Project Hierarchy)
 
+```
+stk/
+├── run.py                 # 🚀 主入口脚本 (Python orchestrator)
+├── config/                # ⚙️ 配置管理中心
+│   ├── cfg_stk.py         # Python配置接口
+│   ├── config.json        # 全局配置
+│   ├── stk_*.json         # 股票相关配置 (资产、交易日、费用等)
+│   └── daily_holding/     # 日持仓数据
+├── cpp/                   # 🔥 C++核心引擎 (高性能数据处理)
+│   ├── include/           # 头文件模块化组织
+│   │   ├── codec/         # 数据编解码核心 (L2协议解析/压缩)
+│   │   │   ├── L2_DataType.hpp          # L2数据类型定义
+│   │   │   ├── binary_*_L2.hpp          # 二进制编解码器
+│   │   │   └── parallel/                 # 并行处理优化
+│   │   ├── features/     # 特征工程模块 (多时间尺度)
+│   │   │   ├── Features*.hpp            # 特征计算引擎
+│   │   │   └── Features*/               # 各时间尺度特征实现
+│   │   ├── lob/          # 限价订单簿核心 (LOB - Limit Order Book)
+│   │   │   ├── LimitOrderBook.hpp       # LOB主引擎
+│   │   │   └── LimitOrderBookDefine.hpp # LOB数据结构定义
+│   │   ├── math/         # 数学计算库
+│   │   ├── mining/       # 数据挖掘算法
+│   │   └── utils/        # 工具函数库
+│   ├── src/              # 源文件实现
+│   └── projects/main/    # 🏗️ 构建配置 (CMake项目)
+│       ├── build.sh      # Bash构建脚本 (调用CMake)
+│       ├── CMakeLists.txt # CMake配置 (C++23, Clang, 性能优化)
+│       └── build/        # 构建输出目录
+│           └── bin/app_main # 🎯 最终生成的可执行文件
+├── py/                    # 🐍 Python工具链
+│   ├── main.py            # Python构建脚本 (触发build.sh)
+│   └── app/               # 应用逻辑
+├── doc/                   # 📚 文档
+├── output/                # 💾 输出目录 (处理后数据存储)
+└── dump/                  # 🗂️ 调试/临时文件/二进制数据库
+```
 
-
-
-
-
-
-
-
-
-
-
-
+# ================================================
 
 自用脚本:
 # cmd
